[project]
name = "vidutils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "av>=17.0.0",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "typing-extensions>=4.15.0",
    "vapoursynth>=74",
]
